--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="libs/javax.json-1.0.4.jar"/>
+	<classpathentry kind="lib" path="libs/ejml-simple-0.41.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="libs/ejml-core-0.41.jar"/>
+	<classpathentry kind="lib" path="libs/ejml-cdense-0.41.jar"/>
+	<classpathentry kind="lib" path="libs/ejml-ddense-0.41.jar"/>
+	<classpathentry kind="lib" path="libs/ejml-dsparse-0.41.jar"/>
+	<classpathentry kind="lib" path="libs/ejml-experimental-0.41.jar"/>
+	<classpathentry kind="lib" path="libs/ejml-fdense-0.41.jar"/>
+	<classpathentry kind="lib" path="libs/ejml-zdense-0.41.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
